testsuite/tests/deriving/should_compile/T16179.hs
{-# LANGUAGE DeriveAnyClass             #-}
{-# LANGUAGE GeneralizedNewtypeDeriving #-}

module T16179 where

class C a
newtype T a = MkT a deriving C
